--- a/.github/workflows/mlops.yaml
+++ b/.github/workflows/mlops.yaml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  train-report-and-publish::
+  train-report-and-publish:
     permissions: write-all
     runs-on: ubuntu-latest
     steps:
